--- a/Reimburs Proj/HTML Reimburs/Status/status.html
+++ b/Reimburs Proj/HTML Reimburs/Status/status.html
@@ -17,6 +17,7 @@ body{font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida 
     <div>
         <input type="text" id= "Status" placeholder= "enter Employee ID"/>
         <input type="submit" value= "Get Reimbursement Info" id= "formSubmitGet"/>
+        
         <h2 id="formName"></h2>
         <h3 id="formID"></h3>
         <h3 id="formApproval"></h3>
@@ -26,6 +27,7 @@ body{font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida 
         <input type="file" class="form-control-file" id="exampleFormControlFile1">
       </div>
 </div>
+<button type="delete" class="btn btn-primary">Delete</button>
 <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
