--- a/TRMS/about.html
+++ b/TRMS/about.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class = "about-body">
-        <header><img src = "https://cdn1.iconfinder.com/data/icons/website-internet/48/website_-_female_user-512.png" width = "150px" height = "150px"></header>
+        <header><img src = "REBUR$.PNG" width = "252px" height = "80px"></header>
 
         <nav>
             <ul>
@@ -198,7 +198,7 @@
                                 </div>
                             
                             <div class = "content">
-                                <h3>Techical Trainings</h3>
+                                <h3>Technical Trainings</h3>
                                 <p>Do you want to get some Technical Training to help 
                                     further your career? This training could be eligible 
                                     for 90% reimbursement. Employees must submit grades to qualify.
