--- a/TRMS/employeedashboard.html
+++ b/TRMS/employeedashboard.html
@@ -20,6 +20,28 @@
 </head>
 
 <body class = "edashboard-body">
+        <header><img src = "REBUR$.PNG" width = "252px" height = "80px"></header>
+
+        <!-- Add icon library -->
+
+
+<div class="card">
+  <div>
+    <img src="profile1.jpg" alt="John" style="width:100%">
+  <h3>Name: </h3>
+  <p class="title">Emp. Type: </p>
+  <p>Emp. ID: </p>
+    </div>
+
+
+</div>
+<div class = "apply-button">
+        <button class = "emp-apply" onclick="window.location.href = 'form2.html';">Apply for Reimbursement</button>
+</div>
+
+
+<!-- <iframe src="http://localhost:8080/TRMS/PopulateServlet" width= "100%" height="300px"></iframe> -->
+
         <div class = "table-stuff">
         <table class="content-table">
             
