--- a/TRMS/home2.html
+++ b/TRMS/home2.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <header><img src = "https://cdn1.iconfinder.com/data/icons/website-internet/48/website_-_female_user-512.png" width = "100px" height = "100px"></header>
+        <header><img src = "REBUR$.PNG" width = "252px" height = "80px"></header>
 
         <nav>
             <ul>
